8284273: Early crashes in os::print_context on AArch64

Reviewed-by: stefank, stuefe